--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
 .mainbox{
     width: 300px;
     height: 500px;
-    background-color: #18243c;
+    background-color: #29364f;
     /* display: flex;
     justify-content: start;
     align-items: center; */
